test/src/e2e_vm_tests/test_programs/should_fail/wrongly_sized_tuple_destructuring/src/main.sw
script;

fn main() {
  let a = (true, 10, 64);
  let (_b, _c) = a;
}
